mini-logo and footer

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 	    		<li><a href="#">+Kano</a></li>
 	    		<li><a href="#">GMail</a></li>
 	    		<li><a href="#">Images</a></li>
+	    		<li><a href="#"><img src="img/grid.png" /></a></li>
 	    		<li><a href="#">"Logo"</a></li>
 	    		<li><a href="#">"Sign In Btn"</a></li>
 			</ul>
 		</div>
     </div>
     <div class="main-container">
-    <div class="img-container">
-    	<img src="http://upload.wikimedia.org/wikipedia/commons/2/20/Google-Logo.svg"/>
+    <div class="logo-container">
+    	<img src="img/glogo.png"/>
     </div>
     <form class="search_form" action="/">
       <input type="text" name="search_value" align="left" size="70" autofocus><br>
@@ -35,7 +36,7 @@
           
     <div class="footer">
         <div class="footer-right">
-        	<a href="#">Privacy & Terms</a>
+        	<a href="#">Privacy &amp; Terms</a>
         	<a href="#">Settings</a>
         	<a href="#">Use Google.com</a>
         </div>  
